--- a/src/utils/i18n/fr.json
+++ b/src/utils/i18n/fr.json
@@ -13,5 +13,11 @@
   "TypeOfTraining": "Type de formation",
   "NumberOfCampaigns": "Nombre de campagnes",
   "Delete": "Supprimer",
-  "ListOfTrainingSessions": "Liste des sessions de formation"
+  "ListOfTrainingSessions": "Liste des sessions de formation",
+  "RemovalOfTraining": "Suppression de la formation",
+  "WithTheLabel": "avec le label",
+  "ScheduledOn": "prévu le",
+  "TrainingSessionSuccess": "La création de la session de formation est un succès",
+  "ContactSupport": "Une erreur s'est produite - Veuillez contacter le support",
+  "NotConsidered": "Les éléments suivants n'ont pas été pris en compte (attendus : 6 caractères majuscules) :"
 }
