--- a/src/utils/i18n/fr.json
+++ b/src/utils/i18n/fr.json
@@ -9,7 +9,7 @@
   "ImportTraineesList": "Importer une liste de stagiaires par fichier CSV",
   "HomePage": "Accueil",
   "TrainingSession": "Sessions de formation",
-  "TrainingLabel": "Training label",
+  "TrainingLabel": "Label de la formation",
   "OrganizationalUnit": "Unité organisationnelle",
   "TypeOfTraining": "Type de formation",
   "NumberOfCampaigns": "Nombre de campagnes",
