--- a/src/utils/i18n/fr.json
+++ b/src/utils/i18n/fr.json
@@ -18,7 +18,7 @@
   "ListOfTrainingSessions": "Liste des sessions de formation",
   "RemovalOfTraining": "Suppression de la formation",
   "WithTheLabel": "avec le label",
-  "ScheduledOn": "prévu le",
+  "ScheduledOn": "prévue le",
   "TrainingSessionSuccess": "La création de la session de formation est un succès",
   "ContactSupport": "Une erreur s'est produite - Veuillez contacter le support",
   "NotConsidered": "Les éléments suivants n'ont pas été pris en compte (attendus : 6 caractères majuscules) :",
